# mcp-semantic-pdf-reader

./: .gitignore  Dockerfile  README.md  pyproject.toml
.serena/: project.yml
src/mcp_semantic_pdf_reader/: pdf_processor.py  server.py
tests/: test_basic.py
